--- a/idex.html
+++ b/idex.html
@@ -53,8 +53,8 @@
       }
 
       /* media queries */
-      @media only screen and (max-width: 720) {
-        header{
+      @media  (max-width: 720px) {
+        section > div{
           background-color: red;
         }
       }
